Update .gitignore, .gitattribuets & .distignore files.
Update .gitignore, .gitattribuets & .distignore files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -44,4 +44,5 @@ node_modules/           export-ignore
 build/                  export-ignore 
 postcss.config.js       export-ignore
 .wordpress-org          export-ignore
+/styles/.gitignore      export-ignore
 
