--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 .babelrc                export-ignore
+.vscode                 export-ignore
 .deployignore           export-ignore
 .distignore             export-ignore
 .editorconfig           export-ignore
