--- a/.distignore
+++ b/.distignore
@@ -46,3 +46,11 @@ postcss.config.js
 .wordpress-org
 /styles/.gitignore
 .vscode
+divi-5/**/*.jsx
+divi-5/**/node_modules
+divi-5/**/package.json
+divi-5/**/installed.json
+divi-5/**/composer.json
+divi-5/**/composer.lock
+divi-5/**/webpack.config.js
+divi-5/**/License
