--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ divi-5/**/composer.json export-ignore
 divi-5/**/composer.lock export-ignore
 divi-5/**/webpack.config.js export-ignore
 divi-5/**/License export-ignore
+divi-5/visual-builder/src/*
