--- a/.gitattributes
+++ b/.gitattributes
@@ -47,3 +47,4 @@ postcss.config.js       export-ignore
 .wordpress-org          export-ignore
 /styles/.gitignore      export-ignore
 visual-builder/        export-ignore 
+asset-manifest.json   export-ignore 
